[workspace]
members = [
    "app", 
    "codec", 
    "coregen", 
    "corelib",
    
    "devices/influxdb_device", 
    "devices/mssql_device", 
    "devices/mysql_device", 
    "devices/oracle_device", 
    "devices/postgresql_device", 
    "devices/http_device", 
    "devices/riemann_device",
    "devices/ssh_device",
]